# esp32_smart_clock

./: CMakeLists.txt
components/u8g2-hal-esp-idf/: LICENSE  README.md
components/u8g2-hal-esp-idf/src/: u8g2_esp32_hal.c
docs/: README.md
eda/clock/: PCB_clock.json  clock.json  info
eda/dc5521_to_3.3v/: PCB_dc5521_to_3.3v.json  dc5521_to_3.3v.json  info
main/: CMakeLists.txt  alarm.c  alarm.h  alarm_belling_mode.c  alarm_belling_mode.h  alarm_controller_mode.c  alarm_controller_mode.h  alarm_listview_mode.c  alarm_listview_mode.h  base_mode.c  base_mode.h  bcd.h  buzzer.c  buzzer.h  generic_alarm.c  generic_alarm.h  generic_alarm_config_mode.c  generic_alarm_config_mode.h  homepage_mode.c  homepage_mode.h  hourly_chime.c  hourly_chime.h  hourly_chime_config_mode.c  hourly_chime_config_mode.h  key_dispatcher.c  key_dispatcher.h  main.c  mp3.c  mp3.h  ntp.c  ntp.h  ntp_sync_config_mode.c  ntp_sync_config_mode.h  oled.c  oled.h  pin_layout.h  rx8025.c  rx8025.h  time_setter_mode.c  time_setter_mode.h  (+14 more)
